# FastAPItest

./: .gitignore  pyproject.toml
3/: 3_1_1.py  3_1_2.py  3_2_1.py  3_3_1.py
3/models/: model_3.py
4/: 4_1_1.py  4_1_ex.py  4_2_1.py  4_2_ex.py  4_2_ex2.py  4_3_1.py  4_3_ex1.py
4/models/: model_4_1.py
5/5_1/: 5_1.py  docker-compose-ci.yaml
5/5_2/: main.py  models.py
5/5_3/: .env_1.py  alembic.ini  models.py
5/5_3/alembic/: env.py
6/6_1/: 6_1_1.py  6_1_2.py  models.py
6/6_2/: 6_2_1.py  6_2_2.py  models.py
6/6_3/: 6_3_1.py  models.py
7/7_1/main/: m_7_1_1.py  m_7_1_2.py
7/7_1/tests/: test_7-1-1.py  test_7-1-2.py
7/7_2/: app.py  external_api.py  main.py  test_api.py  test_main.py
7/7_3/: main_7_3.py  models_7_3.py  test_main_7_3.py
8/8_1/: middleware.py
8/8_2/: websocket_app.py
UDP/: client.py  server.py
fastapitest/: 2_3.py  calc.py  index.html  main.py
fastapitest/models/: model_1.py
