[tool.poetry]
name = "fastapitest"
version = "0.1.0"
description = ""
authors = ["desert71 <amkazennov99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.108.0"}
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
pymongo = "^4.6.1"
envparse = "^0.2.0"
motor = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
