[tool.poetry]
name = "fastapitest"
version = "0.1.0"
description = ""
authors = ["desert71 <amkazennov99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.108.0"}
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
pymongo = "^4.6.1"
envparse = "^0.2.0"
motor = "^3.3.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pytest = "^8.0.0"
requests = "^2.31.0"
logfire = {extras = ["fastapi"], version = "^0.43.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
